<resources>
    <string name="app_name">explore_ng</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="hint_email">User</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">Password</string>
    <string name="unesi_ime">Enter username!</string>
    <string name="unesi_pass">Enter password!</string>
    <string name="pass_kratak">Password too short, enter minimum of 6 characters!</string>
    <string name="uspjesna_prijava">Successful login.</string>
    <string name="neuspjesna_prijava">Unsuccessful login.</string>
    <string name="uspjesna_registracija">Successful registration.</string>
    <string name="neuspjesna_registracija">Unsuccessful registration. Try with different username</string>
    <string name="dozvola_pisanje_vanjska_memorija">Write</string>
    <string name="odobreno"><![CDATA[ -> approved]]></string>
    <string name="dopustenje">\"Approval needed \"</string>
    <string name="koristenje">\" to use this application\"</string>
    <string name="dopustenje2">Approval needed</string>
    <string name="odbijena_dozvola">\" Approval not given\"</string>
    <string name="gruba_lokacija">Coarse location</string>
    <string name="lokacija">Location</string>
    <string name="dozvola_prihvacena">\" Approval accepted\"</string>
    <string name="skupljanje">Collect locations</string>+
    <string name="kviz">quiz</string>
    <string name="poredak">Leaderboard</string>
    <string name="galerija">Gallery of locations</string>
    <string name="profil">profile</string>
    <string name="about">about application</string>
    <string name="about2">about project</string>
    <string name="skupi">collect</string>
    <string name="zatvori">close</string>
    <string name="upload">upload</string>
    <string name="promjeni">change</string>
    <string name="statistika">Statistics:</string>
    <string name="location_collection">Number of collected locations: </string>
    <string name="quizes">"Quizzes played: "</string>
    <string name="quizes2">"Average quiz point: "</string>
    <string name="last">"Last collected location: "</string>
    <string name="total">"Total points: "</string>
    <string name="logout">"Log Out"</string>
    <string name="menu">"Menu"</string>
    <string name="next">"Next"</string>
    <string name="finish">Finish</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="Distance">Distance to marker:</string>
    <string name="collected">Marker already collected</string>
    <string name="closer"><![CDATA[Move a bit closer <30 m]]></string>
    <string name="back">Return to menu</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="mjesto"> place</string>
    <string name="colect">" collected"</string>
    <string name="congrats">"Congratulations on successful acquisition of new marker.\n\nYou can check details about marker, that are not shown in short description, in gallery of collected markers.\n\n"</string>
    <string name="no">Close</string>
    <string name="gallery">Gallery</string>
    <string name="Detalji">Details about marker</string>
    <string name="nou">Exit</string>
    <string name="o_projektu">About Project</string>
    <string name="nagrade">Rewards</string>
    <string name="o_projektu_left">"About "</string>
    <string name="o_projektu_right">Project</string>
    <string name="nagrade_left">Rew</string>
    <string name="nagrade_right">ards</string>
    <string name="kviz_left">qu</string>
    <string name="kviz_right">iz</string>
    <string name="skupljanje_left">Collect\n</string>
    <string name="skupljanje_right">locations</string>
    <string name="profil_left">prof</string>
    <string name="profil_right">ile</string>
    <string name="poredak_left">Leader</string>
    <string name="poredak_right">board</string>
    <string name="galerija_left">Gallery o</string>
    <string name="galerija_right">f locations</string>
    <string name="about_left">about ap</string>
    <string name="about_right">plication</string>
    <string name="ClickAbove">Click the circle above to switch to Business client</string>
    <string name="privatni_korisnik">Privatni korisnik</string>
</resources>