<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="?android:textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_margin="20dp"
            android:background="@drawable/ripple"
            app:layout_constraintBottom_toTopOf="@id/btn_signup"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login"
            android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        style="?android:textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register"
        android:textColor="@color/black"/>


    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        android:elevation="10dp"
        android:id="@+id/CV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_profile_photo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@color/grey3"
        android:src="@drawable/ic_launcher_background"
        android:layout_gravity="center"
         android:elevation="15dp"
        android:padding="25dp"
        android:scaleType="centerCrop"
         />
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/CV"
        app:layout_constraintStart_toStartOf="@id/CV"
        app:layout_constraintBottom_toBottomOf="@id/CV"
        app:layout_constraintEnd_toEndOf="@id/CV" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topin"
        android:layout_margin="20dp"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"

                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>