<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".activities.Profil">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        android:elevation="10dp"
        android:id="@+id/CV"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:background="@color/grey3"
            android:src="@drawable/ic_launcher_background"
            android:layout_gravity="center"
            android:elevation="15dp"
            android:padding="25dp"
            android:scaleType="centerCrop"
            />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/upload"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/CV"
        app:layout_constraintTop_toTopOf="@id/CV" />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:text="JA"
        app:layout_constraintTop_toBottomOf="@id/CV"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:alpha="0.85"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/lightish"
        app:layout_constraintTop_toBottomOf="@id/welcome">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <TextView
        android:id="@+id/stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistika"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/statistika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistika"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/stat"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_menu"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:background="@drawable/ripple"
       android:layout_weight="1"
        android:text="@string/menu"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/logout"
        android:textColor="@color/black"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>