<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/ripple"
        android:elevation="10dp"
        android:text="@string/next"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/lightish"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imagequestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_optionA"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:background="@drawable/ripple"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_optionB"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:background="@drawable/ripple"
            android:text="@string/logout"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_optionC"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_margin="20dp"
            android:background="@drawable/ripple"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/menu"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_optionD"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:background="@drawable/ripple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/logout"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>